# lg_imgui

./: .gitignore  .gitmodules  CMakeLists.txt  autogenerate_imgui.py  litgen_imconfig.h  setup.py
bindings/: module.cpp
bindings/lg_imgui/: .gitignore  __init__.py
playground/: play_with_imgui.py
